force-app/main/default/objects/Visit__c/validationRules/WorkTime.validationRule-meta.xml
<ValidationRule>
    <fullName>WorkTime</fullName>
    <active>true</active>
    <errorConditionFormula>TIMEVALUE($CustomMetadata.Default_Workday_Setting__mdt.TimeTable_for_doctors.First_Shift_Start__c) &lt;   TIMEVALUE(StartDate__c)</errorConditionFormula>
    <errorMessage>Wrong</errorMessage>
</ValidationRule>